--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
@@ -97,7 +98,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring-boot.version}</version>
                 <configuration>
-                    <mainClass>org.example.usercenter.UserCenterApplication</mainClass>
+                    <mainClass>org.example.usercenter.demos.UserCenterApplication</mainClass>
                     <skip>true</skip>
                 </configuration>
                 <executions>
