--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+    application:
+      name: user-center-backend
     datasource:
       url: jdbc:mysql://localhost:3306/yupi
       username: root
