--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,6 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>2.2.2</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
@@ -97,6 +96,10 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <mainClass>com.baeldung.demo.DemoApplication</mainClass>
                     <layout>JAR</layout>
@@ -130,7 +133,7 @@
                 <version>${spring-boot.version}</version>
                 <configuration>
                     <mainClass>org.example.usercenter.demos.UserCenterApplication</mainClass>
-                    <skip>true</skip>
+<!--                    <skip>true</skip>-->
                 </configuration>
                 <executions>
                     <execution>
@@ -147,4 +150,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
